--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div class="wrap-container"></div>
+    <div class="wrap-container">
+      <div class="city-input">
+        <input class="city-name" type="text" />
+        <button class="check-weather-btn">Sprawdź pogodę</button>
+      </div>
+      <div class="cities-wrapper"></div>
+    </div>
     <script src="index.js" async defer></script>
   </body>
 </html>
