started of implementation while more than 2 cities

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <div class="wrap-container">
+      <div class="city-choose"></div>
       <div class="city-input">
         <input class="city-name" type="text" />
         <button class="check-weather-btn">Sprawdź pogodę</button>
