eventlistener on enter in input

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
       <div class="cities-wrapper"></div>
     </div>
-    <script src="index.js" async defer></script>
+    <script src="index.js" type="module" async defer></script>
+    <script src="effects.js" type="module" async defer></script>
   </body>
 </html>
