updated CSS, new functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Weather App</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -22,8 +22,10 @@
     <div class="wrap-container">
       <div class="city-choose"></div>
       <div class="city-input">
-        <input class="city-name" type="text" />
-        <button class="check-weather-btn">Sprawdź pogodę</button>
+        <input class="city-name" type="text" placeholder="Wpisz nazwę miasta" />
+        <div class="check-weather-btn">
+          <p>Sprawdź pogodę</p>
+        </div>
       </div>
       <div class="cities-wrapper"></div>
     </div>
