err handling, css improve

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <div class="wrap-container">
       <div class="city-choose"></div>
+      <div class="error-handler"></div>
       <div class="city-input">
         <input class="city-name" type="text" placeholder="Wpisz nazwę miasta" />
         <div class="check-weather-btn">
