--- a/index.html
+++ b/index.html
@@ -21,14 +21,26 @@
   <body>
     <div class="wrap-container">
       <div class="city-choose"></div>
-      <div class="error-handler"></div>
+      <div class="error-handler">
+        <p class="error-handler-alert">Błąd!</p>
+        <p>Wpisz poprawną nazwę miasta!</p>
+      </div>
       <div class="city-input">
         <input class="city-name" type="text" placeholder="Wpisz nazwę miasta" />
         <div class="check-weather-btn">
           <p>Sprawdź pogodę</p>
         </div>
       </div>
-      <div class="cities-wrapper"></div>
+      <div class="cities-wrapper">
+        <!-- <div class="city-container">
+          <span class="city-name">Łódź</span>
+          <span class="city-region">Łódzkie</span>
+          <span class="city-country">Polska</span>
+          <!-- <img class="weather" alt="" src="" /> 
+          <span class="temperature">20</span>
+          <button class="del-btn">-</button> -->
+        </div>
+      </div>
     </div>
     <script src="index.js" type="module" async defer></script>
     <script src="effects.js" type="module" async defer></script>
