final css improvement, added weather icons

--- a/index.html
+++ b/index.html
@@ -31,16 +31,7 @@
           <p>Sprawdź pogodę</p>
         </div>
       </div>
-      <div class="cities-wrapper">
-        <!-- <div class="city-container">
-          <span class="city-name">Łódź</span>
-          <span class="city-region">Łódzkie</span>
-          <span class="city-country">Polska</span>
-          <!-- <img class="weather" alt="" src="" /> 
-          <span class="temperature">20</span>
-          <button class="del-btn">-</button> -->
-        </div>
-      </div>
+      <div class="cities-wrapper"></div>
     </div>
     <script src="index.js" type="module" async defer></script>
     <script src="effects.js" type="module" async defer></script>
