icon notdisplaying problem solved

--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
           <p>Sprawdź pogodę</p>
         </div>
       </div>
-      <div class="cities-wrapper"></div>
+      <div class="cities-wrapper">
+        <div class="city-container">
+          <span class="city-name">Warsaw</span>
+          <span class="city-region">Mazowieckie</span>
+          <span class="city-country">Polska</span>
+          <img class="weather" alt="" src="images/03-s.png" />
+          <span class="temperature">26℃</span>
+          <div class="del-btn">
+            <span class="del-btn-span"></span>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="index.js" type="module" async defer></script>
     <script src="effects.js" type="module" async defer></script>
