--- a/index.html
+++ b/index.html
@@ -32,16 +32,7 @@
         </div>
       </div>
       <div class="cities-wrapper">
-        <div class="city-container">
-          <span class="city-name">Warsaw</span>
-          <span class="city-region">Mazowieckie</span>
-          <span class="city-country">Polska</span>
-          <img class="weather" alt="" src="images/03-s.png" />
-          <span class="temperature">26℃</span>
-          <div class="del-btn">
-            <span class="del-btn-span"></span>
-          </div>
-        </div>
+        <div class="city-container"></div>
       </div>
     </div>
     <script src="index.js" type="module" async defer></script>
