block of adding twice same city, bug fixing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="city-choose"></div>
       <div class="error-handler">
         <p class="error-handler-alert">Błąd!</p>
-        <p>Wpisz poprawną nazwę miasta!</p>
+        <p class="error-handler-text"></p>
       </div>
       <div class="city-input">
         <input class="city-name" type="text" placeholder="Wpisz nazwę miasta" />
@@ -31,9 +31,7 @@
           <p>Sprawdź pogodę</p>
         </div>
       </div>
-      <div class="cities-wrapper">
-        <div class="city-container"></div>
-      </div>
+      <div class="cities-wrapper"></div>
     </div>
     <script src="index.js" type="module" async defer></script>
     <script src="effects.js" type="module" async defer></script>
